fix (bg img): responsive on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-body{height:100%;
+body{
+   height:100vh;
    width:100%;
    background-image:url(https://static.pexels.com/photos/34676/pexels-photo.jpg);/*your background image*/  
    background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
